[gd_scene load_steps=13 format=3 uid="uid://c62y131v5tlfc"]

[ext_resource type="Script" path="res://scripts/bosses/seventh_boss.gd" id="1_4837h"]
[ext_resource type="Texture2D" uid="uid://b3risii7iemvo" path="res://graphics/boss_7_body.png" id="2_l0xlv"]
[ext_resource type="Texture2D" uid="uid://t608a28sk24x" path="res://graphics/boss_7_chasis.png" id="3_xayw4"]
[ext_resource type="Texture2D" uid="uid://28p8tiklmmxp" path="res://graphics/boss_7_top.png" id="4_03wuq"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="5_n5cn2"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="6_6dey6"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="7_21ddt"]
[ext_resource type="Texture2D" uid="uid://bmph75rlbsf0f" path="res://graphics/boss_launcher.png" id="8_rkfv6"]
[ext_resource type="PackedScene" uid="uid://c0a2i7onvluxn" path="res://scenes/laser.tscn" id="9_y4yrl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(32, 32)

[node name="SeventhGuardian" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_4837h")
exp_value = 100
power = 3
base_fire_interval = 3.0
min_fire_interval = 2.5
base_hp = 60
max_hp = 120
hp_per_level = 10
base_speed = 112
max_speed = 256
speed_per_level = 32
base_power = 3
max_power = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="Body" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture = ExtResource("2_l0xlv")

[node name="Chasis" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_xayw4")

[node name="Top" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("4_03wuq")

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("5_n5cn2")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("6_6dey6")]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("7_21ddt")
metadata/_edit_use_anchors_ = true

[node name="MuzzlePivot" type="Marker2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="MuzzlePivot" groups=["Cannons"]]
position = Vector2(26, 0)
texture = ExtResource("8_rkfv6")

[node name="Laser" parent="MuzzlePivot/Sprite2D" instance=ExtResource("9_y4yrl")]
position = Vector2(14, 0)

[node name="Sprite2D2" type="Sprite2D" parent="MuzzlePivot" groups=["Cannons"]]
position = Vector2(0, -22)
texture = ExtResource("8_rkfv6")

[node name="MissileMuzzle2" type="Marker2D" parent="MuzzlePivot/Sprite2D2"]
position = Vector2(16, 0)

[node name="Sprite2D3" type="Sprite2D" parent="MuzzlePivot" groups=["Cannons"]]
position = Vector2(0, 22)
texture = ExtResource("8_rkfv6")

[node name="MissileMuzzle" type="Marker2D" parent="MuzzlePivot/Sprite2D3"]
position = Vector2(16, 0)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="charged" from="MuzzlePivot/Sprite2D/Laser" to="." method="_on_laser_charged"]
[connection signal="fired" from="MuzzlePivot/Sprite2D/Laser" to="." method="_on_laser_fired"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
